--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,12 @@
-GOOGLE_CLIENT_ID="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-GOOGLE_CLIENT_SECRET="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+GOOGLE_CLIENT_ID="xxxxxxxxx"
+GOOGLE_CLIENT_SECRET="xxxxxxx"
 
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="xxxxxxxxxxxxxxxxxx"
+NEXTAUTH_SECRET=xxxxxxx
 
-AZURE_AD_CLIENT_ID=xxxxxxx-xxxxx-xxxxx-xxxx
-AZURE_AD_CLIENT_SECRET=xxxxx~xxxxx~xxxxxxxx
-AZURE_AD_TENANT_ID=xxxxxx-xxxxx-xxxxx-xxxxxxxxxx
-NEXTAUTH_URL=http://localhost:3000
+AZURE_AD_CLIENT_ID=xxxxxxx
+AZURE_AD_CLIENT_SECRET=xxxxxxx
+AZURE_AD_TENANT_ID=xxxxxxx
+
+BOX_CLIENT_ID=xxxxxxx
+BOX_CLIENT_SECRET=xxxxxxx
